--- a/code/chap06soln.ipynb
+++ b/code/chap06soln.ipynb
@@ -360,7 +360,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "beta_array = linspace(0.1, 0.9, 11)\n",
@@ -445,7 +447,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "infected_sweep = sweep_beta(beta_array, gamma)"
