Adding non-solution notebooks

--- a/code/chap01soln.ipynb
+++ b/code/chap01soln.ipynb
@@ -66,29 +66,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Hello')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Using the notebooks\n",
     "\n",
-    "The notebooks for each chapter contain the code from the chapter, along with some addition examples, some explanatory text, and some exercises.  I recommend you read the chapter first to understand the concepts and vocabulary, then run the notebook to review what you learned and see it in action, and then attempt the exercises.\n",
+    "The notebooks for each chapter contain the code from the chapter along with addition examples, explanatory text, and exercises.  I recommend you read the chapter first to understand the concepts and vocabulary, then run the notebook to review what you learned and see it in action, and then attempt the exercises.\n",
     "\n",
     "The notebooks contain some explanatory text, but it is probably not enough to make sense if you have not read the book.  If you are working through a notebook and you get stuck, you might want to re-read (or read!) the corresponding section of the book.\n",
     "\n",
@@ -112,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -124,15 +107,20 @@
     }
    ],
    "source": [
-    "# If you want the figures to appear in the notebook, use\n",
+    "# If you want the figures to appear in the notebook, \n",
+    "# and you want to interact with them, use\n",
     "# %matplotlib notebook\n",
     "\n",
+    "# If you want the figures to appear in the notebook, \n",
+    "# and you don't want to interact with them, use\n",
+    "# %matplotlib inline\n",
+    "\n",
     "# If you want the figures to appear in separate windows, use\n",
-    "# %matplotlib qt\n",
+    "# %matplotlib qt5\n",
     "\n",
     "# To switch from one to another, you have to select Kernel->Restart\n",
     "\n",
-    "%matplotlib notebook\n",
+    "%matplotlib qt5\n",
     "\n",
     "from modsim import *\n",
     "\n",
@@ -152,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -187,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +190,7 @@
        "<Quantity(9.8, 'meter / second ** 2')>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +226,7 @@
        "<Quantity(4, 'second')>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -281,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +284,7 @@
        "<Quantity(8.817885349720552, 'second')>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +321,7 @@
        "<Quantity(86.41527642726142, 'meter / second')>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -366,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +369,7 @@
        "<Quantity(193.30546802805438, 'mile / hour')>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3114,7 +3102,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if flip(0.7):\n",
