--- a/code/chap02soln.ipynb
+++ b/code/chap02soln.ipynb
@@ -32,12 +32,14 @@
     "# and you want to interact with them, use\n",
     "# %matplotlib notebook\n",
     "\n",
+    "# If you want the figures to appear in the notebook, \n",
+    "# and you don't want to interact with them, use\n",
+    "# %matplotlib inline\n",
+    "\n",
     "# If you want the figures to appear in separate windows, use\n",
-    "# %matplotlib qt\n",
+    "# %matplotlib qt5\n",
     "\n",
-    "# To switch from one to another, you have to select Kernel->Restart\n",
-    "\n",
-    "%matplotlib notebook\n",
+    "%matplotlib qt5\n",
     "\n",
     "from modsim import *"
    ]
