--- a/code/chap03soln.ipynb
+++ b/code/chap03soln.ipynb
@@ -14,13 +14,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll start with the same code we saw last time: the magic command that tells Jupyter where to put the figures, and the import statement that gets the functions defined in the `modsim` module."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -37,7 +30,7 @@
     "# %matplotlib inline\n",
     "\n",
     "# If you want the figures to appear in separate windows, use\n",
-    "# %matplotlib qt\n",
+    "# %matplotlib qt5\n",
     "\n",
     "# To switch from one to another, you have to select Kernel->Restart\n",
     "\n",
