--- a/code/chap08soln.ipynb
+++ b/code/chap08soln.ipynb
@@ -14,13 +14,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll start with the same code we saw last time: the magic command that tells Jupyter where to put the figures, and the import statement that gets the function defined in the `modsim` module."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -37,7 +30,7 @@
     "# %matplotlib inline\n",
     "\n",
     "# If you want the figures to appear in separate windows, use\n",
-    "# %matplotlib qt|\n",
+    "# %matplotlib qt5\n",
     "\n",
     "# tempo switch from one to another, you have to select Kernel->Restart\n",
     "\n",
@@ -2082,7 +2075,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "system = make_system(*best_params, data)\n",
@@ -2298,7 +2293,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Solution\n",
@@ -2755,7 +2752,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Solution\n",
