--- a/code/chap04sympy.ipynb
+++ b/code/chap04sympy.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following lines set up Jupyter notebook to display math."
+    "The following line sets up Jupyter notebook to display math."
    ]
   },
   {
