--- a/code/chap11soln.ipynb
+++ b/code/chap11soln.ipynb
@@ -14,13 +14,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll start with the same code we saw last time: the magic command that tells Jupyter where to put the figures, and the import statement that gets the function defined in the `modsim` module."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -37,7 +30,7 @@
     "# %matplotlib inline\n",
     "\n",
     "# If you want the figures to appear in separate windows, use\n",
-    "# %matplotlib qt|\n",
+    "# %matplotlib qt5\n",
     "\n",
     "# tempo switch from one to another, you have to select Kernel->Restart\n",
     "\n",
@@ -1431,7 +1424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:**  Simulate the descent of a yo-yo.  How long does it take to reach the end of the string.\n",
+    "**Exercise:**  Simulate the descent of a yo-yo.  How long does it take to reach the end of the string?\n",
     "\n",
     "I provide a `Condition` object with the system parameters:\n",
     "\n",
