--- a/book/book.tex
+++ b/book/book.tex
@@ -494,7 +494,7 @@ about it at \url{http://jupyter.org}.
 \section*{Contributor List}
 
 If you have a suggestion or correction, send it to 
-{\tt downey@allendowney.com}.  Or if you are a Git use, send me a pull request!
+{\tt downey@allendowney.com}.  Or if you are a Git user, send me a pull request!
 
 If I make a change based on your feedback, I will add you to the contributor list, unless you ask to be omitted.
 \index{contributors}
