--- a/code/chap01mine.org
+++ b/code/chap01mine.org
@@ -9,7 +9,7 @@ At about 20 meters per second, the force of air resistance equals the force of g
 As a simplification, let's assume that the acceleration of the penny is a until the penny reaches 20 meters per second, and then 0 afterwards.
 What is the total time for the penny to fall 381 meters?
 
-#+BEGIN_SRC python :results output :exports both
+#+BEGIN_SRC python :results output
   a = 9.80665
   termV = 20
   totalDisplacement = 381
@@ -42,7 +42,7 @@ What is the total time for the penny to fall 381 meters?
 What happens if you spell the name of a system variable wrong?
 Edit the previous cell, change the spelling of wellesley, and run the cell again.
 
-#+BEGIN_SRC python :results output :session :exports both
+#+BEGIN_SRC python :results output :session
   from modsim import System
   bikeshare = System(olin = 10, wellesley = 2)
   bikeshare.olin
@@ -61,7 +61,7 @@ Edit the previous cell, change the spelling of wellesley, and run the cell again
 * Exercise 3
 Add a third attribute called babson with initial value 0, and print the state of bikeshare again.
 
-#+BEGIN_SRC python :results output :exports both
+#+BEGIN_SRC python :results output
   from modsim import System
   bikeshare = System(olin=10, wellesley=2, babson=3)
   print(bikeshare)
@@ -77,7 +77,7 @@ Add a third attribute called babson with initial value 0, and print the state of
 In the cell below, write a few lines of code to move a bike from Wellesley to Olin and plot the updated state.
 
 #+name: systemProgress
-#+BEGIN_SRC python :noweb yes :exports both
+#+BEGIN_SRC python :noweb yes
   import pandas as pd
   import matplotlib.pyplot as plt
   plt.style.use('ggplot')
@@ -100,7 +100,7 @@ In the cell below, write a few lines of code to move a bike from Wellesley to Ol
 #+RESULTS: systemProgress
 : None
 
-#+BEGIN_SRC python :results file :noweb yes :exports both
+#+BEGIN_SRC python :results file :noweb yes
   <<systemProgress>> # reference block with SystemProgress
 
   bikeshare = SystemProgress(olin=10, wellesley=9)
@@ -116,13 +116,11 @@ In the cell below, write a few lines of code to move a bike from Wellesley to Ol
 #+RESULTS:
 [[file:chap01fig/bikeshareplot.png]]
 
-[[https://github.com/concavegit/ModSimPy/blob/master/code/chap01fig/bikeshareplot.png]]
-
 * Exercise 5
 Define a function called =bike_to_olin= that moves a bike from Wellesley to Olin.
 Run the new function and print or plot the results to confirm that it works.
 
-#+BEGIN_SRC python :results output :exports both
+#+BEGIN_SRC python :results output
   from modsim import System
 
 
@@ -155,7 +153,7 @@ Run each of these functions (with appropriate arguments) and confirm that they d
 Adding print statements like this to functions is a useful debugging technique.
 Keep it in mind!
 
-#+BEGIN_SRC python :results output :sesion :exports both
+#+BEGIN_SRC python :results output :sesion
   def move_bike_debug(n):
       print('Running move_bike_debug with argument', n)
       bikeshare.olin -= n
@@ -185,7 +183,7 @@ Keep it in mind!
 #+END_SRC
 
 #+RESULTS:
-#+begin_example :exports both
+#+begin_example
 Running move_bike_debug with argument 2
 olin          8
 wellesley    12
@@ -206,7 +204,7 @@ dtype: int64
 Change the argument of legend to 'random string' and run decorate again.
 You should get an error message that lists the valid location where you can put the legend.
 
-#+BEGIN_SRC python :results file :noweb yes :exports both
+#+BEGIN_SRC python :results file :noweb yes
   <<systemProgress>> # reference code block with class definition
 
   bikeshare = SystemProgress(olin=10, wellesley=9)
@@ -226,9 +224,6 @@ You should get an error message that lists the valid location where you can put 
 #+RESULTS:
 [[file:legendtest.png]]
 
-[[https://github.com/concavegit/ModSimPy/blob/master/code/chap01fig/legendtest.png]]
-
-
 * Exercise 8
 Write a version of decorate that takes an optional parameter named loc with default value 'best'.
 It should pass the value of loc along as an argument to legend.
@@ -236,7 +231,7 @@ Test your function with different values of loc.
 [[https://matplotlib.org/api/pyplot_api.html#matplotlib.pyplot.legend][You can see the list of legal values here]].
 
 #+name: decorate
-#+BEGIN_SRC python :results output :exports both
+#+BEGIN_SRC python :results output
   from matplotlib.pyplot import legend
 
   def decorate(fig, loc=0):
@@ -249,7 +244,7 @@ Test your function with different values of loc.
 
 #+RESULTS: decorate
 
-#+BEGIN_SRC python :noweb yes :results file :exports both
+#+BEGIN_SRC python :noweb yes :results file
   # reference relevant blocks
   <<systemProgress>>
   <<decorate>>
@@ -270,9 +265,8 @@ Test your function with different values of loc.
 
 #+RESULTS:
 [[file:chap01fig/legendtest1.png]]
-[[https://github.com/concavegit/ModSimPy/blob/master/code/chap01fig/legendtest1.png]]
 
-#+BEGIN_SRC python :noweb yes :results file :exports both
+#+BEGIN_SRC python :noweb yes :results file
   # reference relevant blocks
   <<systemProgress>>
   <<decorate>>
@@ -295,15 +289,13 @@ Test your function with different values of loc.
 #+RESULTS:
 [[file:chap01fig/legendtest2.png]]
 
-[[https://github.com/concavegit/ModSimPy/blob/master/code/chap01fig/legendtest2.png]]
-
 * Exercise 9
 Combine the examples from the previous two sections to write a function named =run_steps= that takes three parameters, =named num_steps=, p1, and p2.
 It should use a for loop to run step the number of times specified by =num_steps=, passing along the specified values of p1 and p2.
 After each step, it should plot the updated state.
 Test your function by creating a new System object, creating a new figure, and running =run_steps=.
 
-#+BEGIN_SRC python :results file :noweb yes :exports both
+#+BEGIN_SRC python :results file :noweb yes
   # reference relevant codeblocks
   <<systemProgress>>
   <<decorate>>
@@ -336,5 +328,3 @@ Test your function by creating a new System object, creating a new figure, and r
 
 #+RESULTS:
 [[file:chap01fig/runsteps.png]]
-
-[[https://github.com/concavegit/ModSimPy/blob/master/code/chap01fig/runsteps.png]]
