use ipython instead of python in org; should emulate jupyter exactly

--- a/code/chap01soln.ipynb
+++ b/code/chap01soln.ipynb
@@ -7055,7 +7055,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3.6",
    "name": "python3"
   },
   "language_info": {
