--- a/code/chap01mine.org
+++ b/code/chap01mine.org
@@ -1,7 +1,15 @@
-#+title: ModSim
-
-#+options: num:nil toc:nil
+#+title: Chapter 1 Notebook
+#+author: Kawin Nikomborirak
 #+latex_header: \usepackage[margin=1in]{geometry}
+#+options: toc:nil num:nil
+
+#+BEGIN_SRC ipython :session
+  %matplotlib inline
+  from modsim import *
+  plt.style.use('ggplot')
+#+END_SRC
+
+#+RESULTS:
 
 * Exercise 1
 In reality, air resistance prevents the penny from reaching this velocity.
@@ -9,7 +17,7 @@ At about 20 meters per second, the force of air resistance equals the force of g
 As a simplification, let's assume that the acceleration of the penny is a until the penny reaches 20 meters per second, and then 0 afterwards.
 What is the total time for the penny to fall 381 meters?
 
-#+BEGIN_SRC python :results output :exports both
+#+BEGIN_SRC ipython :session :results output
   a = 9.80665
   termV = 20
   totalDisplacement = 381
@@ -25,13 +33,9 @@ What is the total time for the penny to fall 381 meters?
 
   dToTerm = displacement(a, 0, termV)
   tToTerm = time(a, 0, termV)
-
   dLeft = totalDisplacement - tToTerm
-
   tAfterTerm = dLeft / termV
-
   tTot = tToTerm + tAfterTerm
-
   print("It will take %f seconds for the coin to fall" % tTot)
 #+END_SRC
 
@@ -39,292 +43,234 @@ What is the total time for the penny to fall 381 meters?
 : It will take 20.987461 seconds for the coin to fall
 
 * Exercise 2
-What happens if you spell the name of a system variable wrong?
+Exercise: What happens if you spell the name of a system variable wrong?
 Edit the previous cell, change the spelling of wellesley, and run the cell again.
 
-#+BEGIN_SRC python :results output :session :exports both
+#+BEGIN_SRC python :session :results output
   from modsim import System
-  bikeshare = System(olin = 10, wellesley = 2)
-  bikeshare.olin
-  bikeshare.oln
+
+  bikeshare = System(olin=10,wellesley=2)
+  bikeshare.wellesle
 #+END_SRC
 
 #+RESULTS:
 : 
-: >>> 10
-: Traceback (most recent call last):
+: >>> >>> Traceback (most recent call last):
 :   File "<stdin>", line 1, in <module>
 :   File "/usr/lib64/python3.6/site-packages/pandas/core/generic.py", line 3081, in __getattr__
 :     return object.__getattribute__(self, name)
-: AttributeError: 'System' object has no attribute 'oln'
+: AttributeError: 'System' object has no attribute 'wellesle'
 
 * Exercise 3
-Add a third attribute called babson with initial value 0, and print the state of bikeshare again.
+Exercise: Add a third attribute called babson with initial value 0, and print the state of bikeshare again.
 
-#+BEGIN_SRC python :results output :exports both
+#+BEGIN_SRC ipython :session :results output
   from modsim import System
-  bikeshare = System(olin=10, wellesley=2, babson=3)
+
+  bikeshare = System(olin=1, babson=1, wellesley=0)
   print(bikeshare)
 #+END_SRC
 
 #+RESULTS:
-: olin         10
-: wellesley     2
-: babson        3
+: olin         1
+: babson       1
+: wellesley    0
 : dtype: int64
 
 * Exercise 4
 In the cell below, write a few lines of code to move a bike from Wellesley to Olin and plot the updated state.
 
-#+name: systemProgress
-#+BEGIN_SRC python :noweb yes :exports both
-  import pandas as pd
-  import matplotlib.pyplot as plt
-  plt.style.use('ggplot')
+#+BEGIN_SRC ipython :session :exports both :file chap01fig/plot.png :results raw drawer
+  %matplotlib inline
+  from modsim import (System, plot, newfig)
 
+  bikeshare = System(olin=10, wellesley=10)
 
-  class SystemProgress:
-      def __init__(self, **kwargs):
-          self.history = pd.DataFrame({key: [kwargs[key]] for key in kwargs})
-          self.status = self.history.tail(0)
-
-      def add_bikes(self, **kwargs):
-          newStatus = self.status.copy()
-          for key in kwargs:
-              newStatus[key] += kwargs[key]
-
-          self.history = pd.concat([self.history, newStatus], ignore_index=True)
-          self.status = newStatus
-#+END_SRC
-
-#+RESULTS: systemProgress
-: None
-
-#+BEGIN_SRC python :results file :noweb yes :exports both
-  <<systemProgress>> # reference block with SystemProgress
-
-  bikeshare = SystemProgress(olin=10, wellesley=9)
-
-  bikeshare.add_bikes(olin=2, wellesley=-2)
-  bikeshare.add_bikes(olin=-3, wellesley=3)
-
-  fig = bikeshare.history.plot()
-  fig.figure.savefig('chap01fig/bikeshareplot')
-  return 'chap01fig/bikeshareplot.png'  # required for figure to show below
+  newfig()
+  plot(bikeshare.olin, 'r8-')
+  plot(bikeshare.wellesley, 'bo-')
+  bikeshare.olin -= 1
+  bikeshare.wellesley += 1
+  plot(bikeshare.olin, 'r8-')
+  plot(bikeshare.wellesley, 'bo-')
 #+END_SRC
 
 #+RESULTS:
-[[file:chap01fig/bikeshareplot.png]]
+:RESULTS:
+[[file:chap01fig/plot.png]]
+:END:
 
 * Exercise 5
 Define a function called =bike_to_olin= that moves a bike from Wellesley to Olin.
 Run the new function and print or plot the results to confirm that it works.
 
-#+BEGIN_SRC python :results output :exports both
-  from modsim import System
+#+BEGIN_SRC ipython :session :file chap01fig/bike_to_olin.png :results raw drawer :exports both
+  def bike_to_olin():
+      bikeshare.olin += 1
+      bikeshare.wellesley -= 1
 
-
-  def bike_to_olin(sys):
-      sys.olin += 1
-      sys.wellesley -= 1
-
-
-  bikeshare = System(olin=10, wellesley=10)
+  newfig()
 
   for _ in range(3):
-      print(bikeshare)
-      bike_to_olin(bikeshare)
+      plot(bikeshare.olin, 'r8-')
+      plot(bikeshare.wellesley, 'bo-')
+      bike_to_olin()
 #+END_SRC
 
 #+RESULTS:
-: olin         10
-: wellesley    10
-: dtype: int64
-: olin         11
-: wellesley     9
-: dtype: int64
-: olin         12
-: wellesley     8
-: dtype: int64
+:RESULTS:
+[[file:chap01fig/bike_to_olin.png]]
+:END:
 
 * Exercise 6
 The following function definitions start with print statements so they display messages when they run.
 Run each of these functions (with appropriate arguments) and confirm that they do what you expect.
-Adding print statements like this to functions is a useful debugging technique.
-Keep it in mind!
 
-#+BEGIN_SRC python :results output :sesion :exports both
-  def move_bike_debug(n):
-      print('Running move_bike_debug with argument', n)
-      bikeshare.olin -= n
-      bikeshare.wellesley += n
-
-
-  def bike_to_wellesley_debug():
-      print('Running bike_to_wellesley_debug')
-      move_bike_debug(1)
-
-
-  def bike_to_olin_debug():
-      print('Running bike_to_olin_debug')
-      move_bike_debug(-1)
-
-
-  from modsim import System
-  bikeshare = System(olin=10, wellesley=10)
-  move_bike_debug(2)
-  print(bikeshare)
-
-  bike_to_wellesley_debug()
-  print(bikeshare)
-
-  bike_to_olin_debug()
-  print(bikeshare)
+#+BEGIN_SRC ipython :session :results raw drawer
+def move_bike_debug(n):
+    print('Running move_bike_debug with argument', n)
+    bikeshare.olin -= n
+    bikeshare.wellesley += n
+    
+def bike_to_wellesley_debug():
+    print('Running bike_to_wellesley_debug')
+    move_bike_debug(1)
+    
+def bike_to_olin_debug():
+    print('Running bike_to_olin_debug')
+    move_bike_debug(-1)
 #+END_SRC
 
 #+RESULTS:
-#+begin_example
-Running move_bike_debug with argument 2
-olin          8
-wellesley    12
-dtype: int64
-Running bike_to_wellesley_debug
-Running move_bike_debug with argument 1
-olin          7
-wellesley    13
-dtype: int64
-Running bike_to_olin_debug
-Running move_bike_debug with argument -1
-olin          8
-wellesley    12
-dtype: int64
-#+end_example
+:RESULTS:
+:END:
+
+#+BEGIN_SRC ipython :session :results output
+  move_bike_debug(0)
+#+END_SRC
+
+#+RESULTS:
+: Running move_bike_debug with argument 0
+
+#+BEGIN_SRC ipython :session :results output
+  bike_to_wellesley_debug()
+#+END_SRC
+
+#+RESULTS:
+: Running bike_to_wellesley_debug
+: Running move_bike_debug with argument 1
+
+#+BEGIN_SRC ipython :session :results output
+  bike_to_olin_debug()
+#+END_SRC
+
+#+RESULTS:
+: Running bike_to_olin_debug
+: Running move_bike_debug with argument -1
 
 * Exercise 7
 Change the argument of legend to 'random string' and run decorate again.
 You should get an error message that lists the valid location where you can put the legend.
 
-#+BEGIN_SRC python :results file :noweb yes :exports both
-  <<systemProgress>> # reference code block with class definition
-
-  bikeshare = SystemProgress(olin=10, wellesley=9)
-
-  bikeshare.add_bikes(olin=2, wellesley=-2)
-  bikeshare.add_bikes(olin=-3, wellesley=3)
-
-  fig = bikeshare.history.plot()
-  # strange, no error here, just the default behavior. However, I
-  # managed to get the error a different time, I am just unable to
-  # replicate it here.
-  fig.legend(loc='random')
-  fig.figure.savefig('chap01fig/legendtest.png')
-  return 'chap01fig/legendtest.png'  # required for figure to show below
+#+BEGIN_SRC ipython :session :results raw drawer
+  def decorate():
+      legend(loc='a random string')
+      label_axes(title='Olin-Wellesley Bikeshare',
+                 xlabel='Time step (min)',
+                 ylabel='Number of bikes')
 #+END_SRC
 
 #+RESULTS:
-[[file:chap01fig/legendtest.png]]
+:RESULTS:
+:END:
+
+#+BEGIN_SRC ipython :session :file chap01fig/dec.png :results raw drawer :exports both
+  decorate()
+#+END_SRC
+
+#+RESULTS:
+:RESULTS:
+[[file:chap01fig/dec.png]]
+:END:
 
 * Exercise 8
 Write a version of decorate that takes an optional parameter named loc with default value 'best'.
 It should pass the value of loc along as an argument to legend.
 Test your function with different values of loc.
-[[https://matplotlib.org/api/pyplot_api.html#matplotlib.pyplot.legend][You can see the list of legal values here]].
+You can see the list of legal values here.
 
-#+name: decorate
-#+BEGIN_SRC python :results output :exports both
-  from matplotlib.pyplot import legend
-
-  def decorate(fig, loc=0):
-      fig.legend(loc=loc)
-      fig.set_title('Olin-Wellesley Bikeshare')
-      fig.set_xlabel('Time Step (min)')
-      fig.set_ylabel('Number of bikes')
-
-#+END_SRC
-
-#+RESULTS: decorate
-
-#+BEGIN_SRC python :noweb yes :results file :exports both
-  # reference relevant blocks
-  <<systemProgress>>
-  <<decorate>>
-
-  plt.style.use('ggplot')
-
-  bikeshare = SystemProgress(olin=10, wellesley=9)
-
-  bikeshare.add_bikes(olin=2, wellesley=-2)
-  bikeshare.add_bikes(olin=-3, wellesley=3)
-
-  fig = bikeshare.history.plot()
-  decorate(fig, loc=0)
-  fig.figure.savefig('chap01fig/legendtest1.png')
-
-  return 'chap01fig/legendtest1.png'  # required for figure to show below
+#+BEGIN_SRC ipython :session :results raw drawer
+  def decorate(loc=0):
+      legend(loc=loc)
+      label_axes(title='Olin-Wellesley Bikeshare',
+                 xlabel='Time step (min)',
+                 ylabel='Number of bikes')
 #+END_SRC
 
 #+RESULTS:
-[[file:chap01fig/legendtest1.png]]
+:RESULTS:
+:END:
 
-#+BEGIN_SRC python :noweb yes :results file :exports both
-  # reference relevant blocks
-  <<systemProgress>>
-  <<decorate>>
-
-  plt.style.use('ggplot')
-
-  bikeshare = SystemProgress(olin=10, wellesley=9)
-
-  bikeshare.add_bikes(olin=2, wellesley=-2)
-  bikeshare.add_bikes(olin=-3, wellesley=3)
-
-  fig = bikeshare.history.plot()
-  decorate(fig, loc=10)
-
-  fig.figure.savefig('chap01fig/legendtest2.png')
-
-  return 'chap01fig/legendtest2.png'  # required for figure to show below
+#+BEGIN_SRC ipython :session :file chap01fig/decloc.png :results raw drawer :exports both
+  decorate()
 #+END_SRC
 
 #+RESULTS:
-[[file:chap01fig/legendtest2.png]]
+:RESULTS:
+[[file:chap01fig/decloc.png]]
+:END:
 
 * Exercise 9
-Combine the examples from the previous two sections to write a function named =run_steps= that takes three parameters, =named num_steps=, p1, and p2.
-It should use a for loop to run step the number of times specified by =num_steps=, passing along the specified values of p1 and p2.
-After each step, it should plot the updated state.
-Test your function by creating a new System object, creating a new figure, and running =run_steps=.
 
-#+BEGIN_SRC python :results file :noweb yes :exports both
-  # reference relevant codeblocks
-  <<systemProgress>>
-  <<decorate>>
+#+BEGIN_SRC ipython :session :results raw drawer
+  def move_bike(n):
+      bikeshare.olin -= n
+      bikeshare.wellesley += n
 
-  from modsim import flip
-  plt.style.use('ggplot')
+  def bike_to_wellesley():
+      move_bike(1)
+    
+  def bike_to_olin():
+      move_bike(-1)
 
-  def step(df, p1=0.5, p2=0.5):
-      print('p1 ->', p1)
-      print('p2 ->', p2)
+  def step(p1=0.5, p2=0.5):
       if flip(p1):
-          df.add_bikes(olin=-1, wellesley=1)
+          bike_to_wellesley()
+  
       if flip(p2):
-          df.add_bikes(olin=1, wellesley=-1)
-
-
-  def run_steps(df, num_steps, p1, p2):
-      for _ in range(num_steps):
-          step(df, p1, p2)
-
-
-  bikeshare = SystemProgress(olin=10, wellesley=2)
-  run_steps(bikeshare, 100, 0.6, 0.2)
-  ax = bikeshare.history.plot()
-  decorate(ax)
-  ax.figure.savefig('chap01fig/runsteps.png')
-
-  return 'chap01fig/runsteps.png'
+          bike_to_olin()
 #+END_SRC
 
 #+RESULTS:
-[[file:chap01fig/runsteps.png]]
+:RESULTS:
+:END:
+
+#+BEGIN_SRC ipython :session :results raw drawer
+  def run_steps(num_steps, p1, p2):
+      for _ in range(num_steps):
+          step(p1, p2)
+          plot_state()
+
+#+END_SRC
+
+#+RESULTS:
+:RESULTS:
+:END:
+
+#+BEGIN_SRC ipython :session :file chap01fig/run_steps1.png :results raw drawer :exports both
+  run_steps(100,0.5,0.5)
+#+END_SRC
+
+#+RESULTS:
+:RESULTS:
+[[file:chap01fig/run_steps1.png]]
+:END:
+
+#+BEGIN_SRC ipython :session :file chap01fig/run_steps2.png :results raw drawer :exports both
+  run_steps(100, 0.2, 0.8)
+#+END_SRC
+
+#+RESULTS:
+:RESULTS:
+[[file:chap01fig/run_steps2.png]]
+:END:
